test/files/parser/errors/curly-function-arg.otest
name = "Curly bracket after function argument"
line = 2
character = 13
error = 'Expected ":" after input name, but received "{".'

---

sine(volume {
